# LP-SciPy

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  test.html  test.ipynb
docs/: index.md
search/: search_index.json
