[tool.poetry]
name = "pulp-tutorial"
version = "0.1.0"
description = ""
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pyomo = "^6.7.2"
pulp = "^2.8.0"
scipy = "^1.13.1"
cvxopt = "^1.3.2"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
notebook = "^7.2.0"
mkdocs-material = "^9.5.24"
matplotlib = "^3.9.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
